2007-10-09  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-java.security.patch: Removed

2007-10-09  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-certbundle.patch: Added in
	CertBundleKeyStoreImpl.java implementation which was previously in our
	jce implementation. Also, added KeyStore.CertBundle to map in this
	patch.

2007-10-08  Andrew Haley  <aph@redhat.com>

	* patches/icedtea-memory-limits.patch: New file.
	Set maximum PermGen space to 128M, MaxHeap to 512M.
	* Makefile.am (ICEDTEA_PATCHES): Add icedtea-memory-limits.patch.

2007-10-08  Mark Wielaard  <mark@klomp.org>

	* AUTHORS: Added Keith Seitz.

2007-10-05  Andrew Haley  <aph@redhat.com>

	* patches/icedtea-debuginfo.patch: Add
	openjdk/hotspot/build/linux/makefiles/gcc.make.
	Add -g to CFLAGS_REQUIRED in
	openjdk/j2se/make/common/Defs-linux.gmk	

2007-10-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

	PR 73
	* Makefile.am (ICEDTEA_PATCHES): Add
	patches/icedtea-gtkplaf.patch.
	* Makefile.in: Regenerate.
	* patches/icedtea-gtkplaf.patch: New file.

2007-10-04  Lillian Angel  <langel@redhat.com>

	* INSTALL: Updated docs on how-to-build, and build requirements.
	* Makefile.am: Added new patch to list.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* configure.ac: Added check for libXinerama libs.
	* patches/icedtea-xinerama.patch: New patch for bug #72.

2007-10-03  Keith Seitz  <keiths@redhat.com>

	* patches/icedtea-float-double-trailing-zeros.patch:
	New file.
	* Makefile.am (ICEDTEA_PATCHES): Add above patch.
	* Makefile.in: Regenerate.

2007-10-03  Keith Seitz  <keiths@redhat.com>

	* patches/icedtea-bytebuffer-compact.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Add above patch.
	* Makefile.in: Regenerated.

2007-10-03  Keith Seitz  <keiths@redhat.com>

	* patches/icedtea-use-system-tzdata.patch: Use AccessController
	instead of System.getProperty.
	Catch AccessControlException while attempting to stat
	ZoneInfoMappings.

2007-10-03  Matthias Klose  <doko@ubuntu.com>
